--- a/Client/src/teamComparison/teamComparison.component.html
+++ b/Client/src/teamComparison/teamComparison.component.html
@@ -11,7 +11,7 @@
     <div fxLayout="row">
       <div>
         <h6>Saison</h6>
-        <md-select [(ngModel)]="selectedSeason" (change)="selectedSeasonChanged()" style="width: 150px; margin-top: 10px">
+        <md-select [(ngModel)]="selectedSeason" style="width: 150px; margin-top: 10px">
           <md-option *ngFor="let season of seasons" [value]="season">
             {{season.StartYear}} / {{season.StartYear+1}}
           </md-option>
