--- a/Client/src/seasons/seasons.component.html
+++ b/Client/src/seasons/seasons.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column">
   <div fxLayout="row">
     <h2>
-      Liste der Saisons
+      {{'ListOfSeasons' | translate}}
     </h2>
   </div>
   <div fxLayout="row" *ngIf=isLoading>
@@ -12,7 +12,7 @@
       <thead>
         <tr>
           <th style="width: 150px">
-            <h6>Saison</h6>
+            <h6>{{'Season' | translate}}</h6>
           </th>
         </tr>
       </thead>
@@ -27,7 +27,7 @@
       <thead>
         <tr>
           <th style="width: 120px">
-            <h6>Saison</h6>
+            <h6>{{'Season' | translate}}</h6>
           </th>
         </tr>
       </thead>
