--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -35,6 +35,12 @@ th {
  width: 42px ;
 }
 
+.icon-size-36 {
+ font-size: 32px;
+ height: 32px ;
+ width: 32px ;
+}
+
 .icon-size-20 {
  font-size: 20px;
  height: 20px ;
