--- a/Client/src/teamPointChart/teamPointChart.component.html
+++ b/Client/src/teamPointChart/teamPointChart.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2>
-    Punkteentwicklung
+    {{'PointProgress' | translate}}
   </h2>
 </div>
 <div *ngIf=isLoadingCatalogData>
@@ -9,14 +9,14 @@
 <div *ngIf=!isLoadingCatalogData>
   <div fxLayout="row">
     <div fxLyout="column">
-      <h6>Saison</h6>
+      <h6>{{'Season' | translate}}</h6>
       <md-select [(ngModel)]="selectedSeason" style="width: 150px; margin-top: 10px">
         <md-option *ngFor="let season of seasons" [value]="season">
           {{season.StartYear}} / {{season.StartYear+1}}
         </md-option>
       </md-select>
     </div>
-    <button md-icon-button class="mat-primary" style="margin-top: 20px; margin-left: 18px" (click)=loadTeamPointChart()>
+    <button md-icon-button class="mat-primary" style="margin-top: 25px; margin-left: 18px" (click)=loadTeamPointChart()>
            <md-icon class="icon-size-24">autorenew</md-icon>
          </button>
   </div>
@@ -31,15 +31,15 @@
       legend="true" chartType="line"></canvas>
     </div>
     <div fxFlex="20" style="margin-left: 30px">
-      <div fxFlex="row" fxLayoutWrap>
+      <div *ngIf="teams" fxFlex="row" fxLayoutWrap>
         <div *ngFor="let team of teams | teamsselectionorderby" fxFlex="25" fxLayoutGap="30px">
           <md-checkbox [(ngModel)]="team.IsSelected" (change)="setChartData()" class="mat-primary">{{team.TeamName}}</md-checkbox>
         </div>
         <div fxFlex="100" fxLayoutGap="30px">
-          <md-checkbox [(ngModel)]="showAll" (change)="toggleShowAll()" class="mat-primary">Alle</md-checkbox>
+          <md-checkbox [(ngModel)]="showAll" (change)="toggleShowAll()" class="mat-primary">{{'All' | translate}}</md-checkbox>
         </div>
         <div fxFlex="100" fxLayoutGap="30px">
-          <md-checkbox [(ngModel)]="showEightPlace" (change)="setChartData()" class="mat-primary">8.Platz</md-checkbox>
+          <md-checkbox [(ngModel)]="showEightPlace" (change)="setChartData()" class="mat-primary">{{'EightPlace' | translate}}</md-checkbox>
         </div>
       </div>
     </div>
