--- a/Client/src/standings/standings.component.html
+++ b/Client/src/standings/standings.component.html
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h2>
-      Tabelle
+      {{'Standings' | translate}}
     </h2>
   </div>
   <div *ngIf=isLoadingCatalogData>
@@ -10,7 +10,7 @@
   <div *ngIf=!isLoadingCatalogData>
     <div fxLayout="row">
       <div>
-        <h6>Saison</h6>
+        <h6>{{'Season' | translate}}</h6>
         <md-select [(ngModel)]="selectedSeason" style="width: 150px; margin-top: 10px">
           <md-option *ngFor="let season of seasons" [value]="season">
             {{season.StartYear}} / {{season.StartYear+1}}
@@ -18,7 +18,7 @@
         </md-select>
       </div>
       <div style="margin-left:25px">
-        <h6>Datum</h6>
+        <h6>{{'Date' | translate}}</h6>
         <md2-datepicker [(ngModel)]="date" format="dd.MM.y"></md2-datepicker>
       </div>
       <div>
@@ -36,38 +36,38 @@
       <thead>
         <tr>
           <th style="width: 20px; text-align: right">
-            <h6>R</h6>
+            <h6>{{'RankShort'  | translate}}</h6>
           </th>
           <th style="width: 5px"></th>
           <th style="width: 200px">
-            <h6>Team</h6>
+            <h6>{{'Team' | translate}}</h6>
           </th>
-          <th style="width: 55px; text-align: center">
-            <h6>SP</h6>
+          <th style="width: 60px; text-align: center">
+            <h6>{{'GamesShort' | translate}}</h6>
           </th>
-          <th style="width: 55px; text-align: center">
-            <h6>S</h6>
+          <th style="width: 60px; text-align: center">
+            <h6>{{'WinsShort' | translate}}</h6>
           </th>
-          <th style="width: 55px; text-align: center">
-            <h6>S n.V</h6>
+          <th style="width: 60px; text-align: center">
+            <h6>{{'OTWinsShort' | translate}}</h6>
           </th>
-          <th style="width: 55px; text-align: center">
-            <h6>N n.V</h6>
+          <th style="width: 60px; text-align: center">
+            <h6>{{'OTLossesShort' | translate}}</h6>
           </th>
-          <th style="width: 55px; text-align: center">
-            <h6>N</h6>
+          <th style="width: 60px; text-align: center">
+            <h6>{{'LossesShort' | translate}}</h6>
           </th>
           <th style="width: 22px; text-align: center">
             <h6></h6>
           </th>
           <th style="width: 8px; text-align: center">
-            <h6>T</h6>
+            <h6>{{'GoalDifferenceShort' | translate}}</h6>
           </th>
           <th style="width: 22px; text-align: center">
             <h6></h6>
           </th>
-          <th style="width: 55px; text-align: center">
-            <h6>P</h6>
+          <th style="width: 60px; text-align: center">
+            <h6>{{'PointsShort' | translate}}</h6>
           </th>
         </tr>
       </thead>
@@ -76,21 +76,20 @@
           <td style="width: 20px; text-align: right" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.Position}}.</td>
           <td style="width: 5px" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}"></td>
           <td style="width: 200px" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.Team.Name}}</td>
-          <td style="width: 55px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.GamesPlayed}}</td>
-          <td style="width: 55px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.Wins}}</td>
-          <td style="width: 55px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.OTWins}}</td>
-          <td style="width: 55px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.OTLosses}}</td>
-          <td style="width: 55px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.Losses}}</td>
+          <td style="width: 60px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.GamesPlayed}}</td>
+          <td style="width: 60px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.Wins}}</td>
+          <td style="width: 60px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.OTWins}}</td>
+          <td style="width: 60px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.OTLosses}}</td>
+          <td style="width: 60px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.Losses}}</td>
           <td style="width: 22px; text-align: right" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.GoalsScored}} </td>
           <td style="width: 8px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">:</td>
           <td style="width: 22px; text-align: right" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.GoalsScoredAgainst}}</td>
-          <td style="width: 55px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.Points}}</td>
+          <td style="width: 60px; text-align: center" [ngClass]="{aboveQualificationLine: standingsEntry.Position==8 , underneathQualificationLine: standingsEntry.Position==9}">{{standingsEntry.Points}}</td>
         </tr>
       </tbody>
     </table>
   </div>
   <div style="margin-top: 80px">
-    <p style="font-size:0.8em">R: Rang, P: Punkte, S: Siege, S n.V: Siege nach Verlängerung oder Penaltyschiessen, N: Niederlagen, N n.V: Niederlagen
-      nach Verlängerung oder Penaltyschiessen, T: Torverhältnis, SP: Spiele</p>
+    <p style="font-size:0.8em">{{'StandingsExplanation' | translate}}</p>
   </div>
 </div>
