--- a/Client/src/standings/standings.component.html
+++ b/Client/src/standings/standings.component.html
@@ -19,10 +19,10 @@
       </div>
       <div style="margin-left:25px">
         <h6>{{'Date' | translate}}</h6>
-        <md2-datepicker [(ngModel)]="date" format="dd.MM.y"></md2-datepicker>
+        <md2-datepicker class="datepickerWidth" [(ngModel)]="date" format="dd.MM.y"></md2-datepicker>
       </div>
       <div>
-        <button md-icon-button class="mat-primary" style="margin-top: 20px; margin-left: 18px" (click)=loadStandings()>
+        <button md-icon-button class="mat-primary" style="margin-top: 20px; margin-left: 45px" (click)=loadStandings()>
            <md-icon class="icon-size-24">autorenew</md-icon>
          </button>
       </div>
