Removed error: Displayed points instead of number of games played

--- a/Client/src/teamStatistics/teamStatistics.component.html
+++ b/Client/src/teamStatistics/teamStatistics.component.html
@@ -59,7 +59,7 @@
       <tbody>
         <tr>
           <td style="width: 150px; text-align: left">{{'Games' | translate}}</td>
-          <td style="width: 100px; text-align: center">{{teamStatistics.Points}}</td>
+          <td style="width: 100px; text-align: center">{{teamStatistics.GamesPlayed}}</td>
           <td style="width: 100px; text-align: center"></td>
         </tr>
         <tr>
