* Changed translation key Results -> GameResults * Changed translation for Results

--- a/Client/src/games/games.component.html
+++ b/Client/src/games/games.component.html
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h2>
-      {{'Results' | translate}}
+      {{'GameResults' | translate}}
     </h2>
   </div>
   <div *ngIf=isLoadingCatalogData>
