season statistics ui

--- a/Client/src/main/main.component.html
+++ b/Client/src/main/main.component.html
@@ -10,6 +10,7 @@
       <div><a md-button class="mat-accent toolbarLink" routerLink="/teamPointChart">{{'PointProgress' | translate}}</a></div>
       <div><a md-button class="mat-accent toolbarLink" routerLink="/teamComparison">{{'TeamComparison' | translate}}</a></div>
       <div><a md-button class="mat-accent toolbarLink" routerLink="/teamStatistics">{{'TeamStatistics' | translate}}</a></div>
+      <div><a md-button class="mat-accent toolbarLink" routerLink="/seasonStatistics">{{'SeasonStatistics' | translate}}</a></div>
       <div><a md-button class="mat-accent toolbarLink" routerLink="/games">{{'Games' | translate}}</a></div>
       <div><a md-button class="mat-accent toolbarLink" routerLink="/teams">{{'Teams' | translate}}</a></div>
       <div><a md-button class="mat-accent toolbarLink" routerLink="/seasons">{{'Seasons' | translate}}</a></div>
