--- a/Client/src/teamComparison/teamComparison.component.html
+++ b/Client/src/teamComparison/teamComparison.component.html
@@ -51,7 +51,7 @@
     <h3>
       {{'Overview' | translate}}
     </h3>
-    <table *ngIf=loadTeamComparison>
+    <table *ngIf=teamComparison>
       <thead>
         <tr>
           <th style="width: 250px;">
