--- a/Client/src/teamStatistics/teamStatistics.component.html
+++ b/Client/src/teamStatistics/teamStatistics.component.html
@@ -43,7 +43,7 @@
     <h3>
       {{'Results' | translate}}
     </h3>
-    <table *ngIf=loadTeamStatistics>
+    <table *ngIf=teamStatistics>
       <thead>
         <tr>
           <th style="width: 150px;">
@@ -99,7 +99,7 @@
     <h3>
       {{'Statistics' | translate}}
     </h3>
-    <table *ngIf=loadTeamStatistics>
+    <table *ngIf=teamStatistics>
       <thead>
         <tr>
           <th style="width: 150px;">
